--- a/app/src/MedicalActs.html
+++ b/app/src/MedicalActs.html
@@ -12,13 +12,14 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 
 		<script src="js/myApp.js"></script>
 		<script src="js/patientController.js"></script>
-	
-	</head>	
-	
-	<body>
+		
+		
 		<!--start-wrap-->
 			<!--start-header-->
 			<div class="header">
@@ -42,6 +43,14 @@
 				<!--end-top-nav-->
 			</div>
 			<!--end-header-->
+		
+	
+	</head>	
+	
+	<body>
+	
+	<div ng-app="cwApp" ng-controller="mainCtrl">
+
 	<div style="margin-top:100px" ng-controller="patientCtrl">
     <table class="table">
 		<tr>
